minikube/growvia-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: growvia-gateway
  namespace: production
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: growvia-gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: growvia-gateway
    spec:
      containers:
      - name: growvia-gateway
        image: veckovn/growvia-gateway:stable 
        imagePullPolicy: Always
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
          requests:
            cpu: 100m
            memory: 150Mi
        ports:
        - name: gateway
          containerPort: 4000
