minikube/growvia-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: growvia-gateway
  namespace: production
spec:
  #The ApiGateway will use ClusterIP as well but we’ll use Ingress
  type: ClusterIP
  selector:
    app: growvia-gateway
  ports:
  - name: gateway
    port: 4000
    targetPort: 4000
    protocol: TCP
